Fix List Card overflow

--- a/app/assets/stylesheets/todos.scss
+++ b/app/assets/stylesheets/todos.scss
@@ -113,7 +113,7 @@
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    height: 12rem;
+    height: 11rem;
     overflow: hidden;
   }
 
